--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>spring-context</artifactId>
             <version>6.1.11</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>6.0.3</version>
+        </dependency>
 
+    </dependencies>
 </project>
