--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,20 @@
             <version>1.6.0.Beta1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>9.0.0.Beta2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <version>3.6.1.Final</version>
+        </dependency>
+
+
+
     </dependencies>
     <build>
         <plugins>
